<resources>
    <string name="app_name">智能管家</string>
    <string name="common_no_network_msg">网络连接失败</string>
    <string name="common_error_msg">抱歉,系统出错了!\\n请点击屏幕重试~</string>
    <string name="common_empty_msg">抱歉,暂未获取到数据!\\n请点击屏幕重试~</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="load_succeed">加载完成</string>
    <string name="load_fail">加载失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="pullup_to_load">上拉加载</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="release_to_load">松开加载</string>
    <string name="loading">正在加载</string>
    <!--录入语音相关-->
    <string name="normal">按住说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <!--app字段相关-->
    <string name="next">下一步</string>
    <string name="homePage">首页</string>
    <string name="monitor">监控</string>
    <string name="device">设备</string>
    <string name="scene">场景</string>
    <string name="my">我的</string>
    <string name="app_motive">应用主题</string>
    <string name="set_app_skin">设置应用主题颜色</string>
    <string name="createPerson">创建人</string>
    <string name="familyPerson">家人</string>
    <string name="declare">使用权限开启后成员将有权使用所有设备，请谨慎选择</string>

    <string name="registerNewAccount">注册新账户</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="otherLoginWay">其他登录方式</string>
    <string name="weiXinLogin">微信登录</string>
    <string name="qqLogin">QQ登录</string>
    <string name="verificationCodeLogin">微博登录</string>
    <string name="telephone">手机号</string>
    <string name="inputTelephone">请输入手机号</string>

    <string name="password">密码</string>
    <string name="inputPassword">请输入密码</string>
    <string name="login">登录</string>
    <string name="inputMessage">请输入用户名或密码</string>
    <string name="systemError">系统正忙</string>

    <!--JPush相关-->
    <string name="tag_hint">Tag can be number, alphabet, underscore, Chinese. Use , to split many tags.</string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="mobilenumber_hint">The phone number can only start with a "+" or a number,other can only contain "-" and Numbers</string>
    <string name="style_hint">style should be number</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Invalid format</string>
    <string name="mobilenumber_empty_guide">will clear last set phone number</string>
    <string name="error_network">Failed to init due to network exception.</string>
    <string name="logining">Running in background. Please see log.</string>
    <string name="setting_su">Succeed to set</string>


</resources>
