<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/base_main_lyt"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorContentBg"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/al_userhead_img"
        android:layout_width="@dimen/dis_79"
        android:layout_height="@dimen/dis_79"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dis_29"
        android:layout_marginTop="@dimen/dis_21"
        android:background="@mipmap/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bottom_border"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_12"
        android:paddingRight="@dimen/margin_12">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_45"
            android:layout_marginTop="@dimen/dis_0.5"
            android:background="@drawable/bottom_border">

            <RelativeLayout
                android:id="@+id/al_code_label_lyt"
                android:layout_width="@dimen/dis_55"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/al_code_txt"
                    style="@style/labelItemStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxEms="3"
                    android:singleLine="true"
                    android:text="用户名"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/al_phoneNumber_edit"
                style="@style/EditItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/al_code_label_lyt"
                android:hint="请输入用户名"/>

            <RelativeLayout
                android:id="@+id/al_clear_phone_lyt"
                android:layout_width="@dimen/margin_28"
                android:layout_height="@dimen/margin_45"
                android:layout_alignParentRight="true"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/margin_14"
                    android:layout_height="@dimen/margin_14"
                    android:layout_centerVertical="true"
                    android:src="@drawable/login_qingchu"/>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_45">

            <TextView
                android:id="@+id/al_password_label"
                style="@style/labelItemStyle"
                android:layout_width="@dimen/dis_55"
                android:layout_height="wrap_content"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/al_password_edit"
                style="@style/EditNameItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/al_password_label"
                android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM123456789"
                android:hint="@string/inputPassword"
                android:inputType="textPassword"
                android:maxLength="20"/>

            <RelativeLayout
                android:id="@+id/al_clear_password_lyt"
                android:layout_width="@dimen/dis_28"
                android:layout_height="@dimen/margin_45"
                android:layout_alignParentRight="true"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/margin_14"
                    android:layout_height="@dimen/margin_14"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/login_qingchu"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/al_login_btn"
        style="@style/ButtonBlueItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_45"
        android:text="@string/login"/>

    <RelativeLayout
        android:id="@+id/ail_haschoose_label_lyt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dis_28"
        android:layout_marginTop="@dimen/dis_15"
        android:paddingLeft="@dimen/margin_12"
        android:paddingRight="@dimen/margin_12">

        <TextView
            android:id="@+id/al_register_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/registerNewAccount"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/font_size_12"/>

        <TextView
            android:id="@+id/al_forgetpassword_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/forgetPassword"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/font_size_12"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dis_0.5"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/colorBorder"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/otherLoginWay"
                    android:textColor="@color/colorText"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dis_0.5"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/colorBorder"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dis_15"
                android:layout_marginTop="@dimen/margin_14"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/al_weixin_lyt"
                    android:layout_width="@dimen/dis_50"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/margin_8"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dis_40"
                            android:layout_height="@dimen/dis_40"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/login_weixin"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/margin_8"
                            android:text="@string/weiXinLogin"
                            android:textColor="@color/colorBlue"
                            android:textSize="@dimen/font_size_9"/>
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/al_qq_lyt"
                    android:layout_width="@dimen/dis_50"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_24"
                    android:layout_marginRight="@dimen/margin_24"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/dis_40"
                        android:layout_height="@dimen/dis_40"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/login_qq"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_8"
                        android:text="@string/qqLogin"
                        android:textColor="@color/colorBlue"
                        android:textSize="@dimen/font_size_9"/>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/al_verify_lyt"
                    android:layout_width="@dimen/dis_50"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dis_40"
                            android:layout_height="@dimen/dis_40"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/login_yanzhengma"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/margin_8"
                            android:text="@string/verificationCodeLogin"
                            android:textColor="@color/colorBlue"
                            android:textSize="@dimen/font_size_9"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
